[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["fs","cors"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls","postgres","sqlite","macros","json"] }
dotenv = "0.15.0"


futures = "0.3"

structopt = "0.3"
anyhow = "1.0.79"

[dev-dependencies]

httpc-test = "0.1.8"

